# 3MF-Dumper

./: .gitignore  Cargo.toml  README.md
docs/: 3mf-structure-and-slicer-settings.md  test3mf-discrepancy-report.md
src/: lib.rs  main.rs
