[package]
name = "three_mf_dumper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmltree = "0.11"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
